fixed dark mode. Added/updated content.

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -686,6 +686,9 @@
   .my-1 {
     margin-block: calc(var(--spacing) * 1);
   }
+  .my-3 {
+    margin-block: calc(var(--spacing) * 3);
+  }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
   }
@@ -1699,6 +1702,9 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-yellow-200 {
+    background-color: var(--color-yellow-200);
+  }
   .-bg-conic {
     --tw-gradient-position: in oklab;
     background-image: conic-gradient(var(--tw-gradient-stops));
@@ -2288,6 +2294,9 @@
   }
   .text-\[rgba\(255\,255\,255\,0\.87\)\] {
     color: rgba(255,255,255,0.87);
+  }
+  .text-black {
+    color: var(--color-black);
   }
   .text-blue-600 {
     color: var(--color-blue-600);
@@ -2925,6 +2934,22 @@
       }
     }
   }
+  .hover\:shadow {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
+  .hover\:shadow-sm {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
   .hover\:drop-shadow-\[0_0_2em_\#61dafbaa\] {
     &:hover {
       @media (hover: hover) {
@@ -3123,57 +3148,67 @@
     }
   }
   .dark\:block {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       display: block;
     }
   }
   .dark\:hidden {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       display: none;
     }
   }
   .dark\:border-neutral-700 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       border-color: var(--color-neutral-700);
     }
   }
   .dark\:border-neutral-800 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       border-color: var(--color-neutral-800);
     }
   }
   .dark\:bg-neutral-900 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       background-color: var(--color-neutral-900);
     }
   }
   .dark\:bg-neutral-950 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       background-color: var(--color-neutral-950);
     }
   }
+  .dark\:bg-purple-700 {
+    &:is(.dark *) {
+      background-color: var(--color-purple-700);
+    }
+  }
   .dark\:text-neutral-100 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       color: var(--color-neutral-100);
     }
   }
   .dark\:text-neutral-300 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       color: var(--color-neutral-300);
     }
   }
   .dark\:text-neutral-400 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       color: var(--color-neutral-400);
     }
   }
   .dark\:text-neutral-500 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       color: var(--color-neutral-500);
     }
   }
+  .dark\:text-white {
+    &:is(.dark *) {
+      color: var(--color-white);
+    }
+  }
   .dark\:hover\:bg-neutral-800 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       &:hover {
         @media (hover: hover) {
           background-color: var(--color-neutral-800);
@@ -3182,7 +3217,7 @@
     }
   }
   .dark\:aria-invalid\:focus-visible\:ring-4 {
-    @media (prefers-color-scheme: dark) {
+    &:is(.dark *) {
       &[aria-invalid="true"] {
         &:focus-visible {
           --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
